# patchie

./: pyproject.toml  requirements-dev.txt  requirements.txt
src/patchie/: constants.py  model_loader.py  patchie.py  query_converter.py  utils.py  variables.py
src/patchie/model_loader/: folder_loader.py  mlflow_loader.py  model_loader.py
test/: orm.py  test_model_loader.py  test_patchie.py  test_utils.py  test_variables.py
